cabal-version:      2.4

-- TODO:
-- - Add `description:`
-- - Add `maintainer:`

name:               brainfuck
version:            0.1.0.0
synopsis:           Brainfuck parser
license:            MIT
license-file:       LICENSE
author:             Froloket64

library
    exposed-modules: Brainfuck.Parsing, Brainfuck.Interpreter

    build-depends: 
        base ^>=4.16.4.0,
        parsec,

    hs-source-dirs:   src

    default-language: Haskell2010
